--- a/gobang-web/src/index.html
+++ b/gobang-web/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="//db.onlinewebfonts.com/c/331ec49c0d78e469c42c1d814dd45838?family=Avenir+Book" rel="stylesheet" type="text/css"/>
+
 </head>
 <body>
   <app-root></app-root>
